--- a/index.html
+++ b/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="divM1">
+        <div class="divtext">
+            <h1>Welcome To</h1>
+            <h1><span>Maisha's</span> Portfolio</h1>
+            <h3><strong>beautiful creature of Allah</strong> </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis eum minus excepturi quidem, dolores
+                nulla itaque aut quaerat rem dolore modi atque est ex. Numquam voluptates exercitationem est non
+                debitis! Alias nulla veritatis repellendus, aut voluptatum necessitatibus velit soluta libero?
+            </p>
+            <a href="https://www.linkedin.com/in/maisha-haider-ba72841a7/" target="blank" class="link1">Hire Me</a>
+        </div>
+        <div class="divimg">
+            <img src="image/golami2.png" alt="">
+
+        </div>
+
+    </div>
+    <div class="divM2">
+        <div class="divimg1">
+            <img src="image/golami1.png" alt="">
+
+        </div>
+        <div class="divtext1">
+            <h1>Dream Big</h1>
+
+            <h3><strong><b>Developer</b> </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis eum minus excepturi quidem, dolores
+                nulla itaque aut quaerat rem dolore modi atque est ex. Numquam voluptates exercitationem est non
+                debitis! Alias nulla veritatis repellendus, aut voluptatum necessitatibus velit soluta libero?
+            </p>
+            <a href="https://www.linkedin.com/in/maisha-haider-ba72841a7/" target="blank" class="link2">Download
+                Resume</a>
+        </div>
+
+
+    </div>
+
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+
+        <div class="divM3">
+            <div class="d1">
+                <div class="left1"></div>
+                <h1 text-align="center">Full Stack Developer</h1>
+                <h3>2020-2023| Pro level developer</h3>
+
+                <br>
+                <p>hat is Lorem Ipsum?
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. a</p>
+            </div>
+            <div class="d2">
+                <div class="left2"></div>
+                <h1 text-align="center">Baby Developer</h1>
+                <h3>2020-2023| Pro level developer</h3>
+                <br>
+                <p>hat is Lorem Ipsum?
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. a</p>
+
+            </div>
+        </div>
+    </section>
+
+
+
 </body>
+<footer>@ Maisha 2021,Own initiative :) </footer>
+
 </html>
